sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:7: error: ';' expected but '=' found.
  casePrec:Int = 0;
               ^